[package]
name = "cursimon-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["cursimon", "glue", "wasm"]

[dependencies]
wasm-bindgen = "0.2"
cursimon = { path = "./cursimon" }
glue = { path = "./glue" }
